armour bundles now display contents upon hover armour bundles now show a bar to display how full they are improved current profile text fixed incorrect key category name